tests/compile_fails/invalid_visibility.rs
use dissolve_derive::Dissolve;

#[derive(Dissolve)]
#[dissolve(visibility = "invalid_visibility")]
struct InvalidVisibility {
    field: String,
}

fn main() {}
